@startuml

entity "account" {
  *id: VARCHAR <<PK>>  // Auth0 `sub`, e.g. "auth0|abc123"
}

entity "video" {
  *id: VARCHAR <<PK>>  // YouTube video ID, e.g. "dQw4w9WgXcQ"
  title: VARCHAR
}

entity "account_video" {
  +account_id: VARCHAR <<PK, FK>>
  +video_id: VARCHAR <<PK, FK>>
  created_at: TIMESTAMP
}

entity "transcript" {
  *id: UUID <<PK>>
  created_at: TIMESTAMP
  video_id: VARCHAR <<FK>>
  transcript_text: TEXT
}

entity "summary" {
  *id: UUID <<PK>>
  created_at: TIMESTAMP
  transcript_id: UUID <<FK>>
  summary_text: TEXT
}

entity "conversation" {
  *id: UUID <<PK>>
  created_at: TIMESTAMP
  account_id: VARCHAR <<FK>>
  video_id: VARCHAR <<FK>>
}

note right of conversation
  Unique(account_id, video_id)
  One conversation per account video
end note

entity "message" {
  *id: UUID <<PK>>
  created_at: TIMESTAMP
  conversation_id: UUID <<FK>>
  user_message: TEXT
  ai_response: TEXT
}

entity "transcript_chunk" {
  *id: UUID <<PK>>
  transcript_id: UUID <<FK>>
  chunk_text: TEXT
  chunk_index: INT
}

entity "embedding" {
  *id: UUID <<PK>>
  created_at: TIMESTAMP
  transcript_chunk_id: UUID <<FK>>
  embedding: vector(768)
}

' Relationships
account_video::account_id --> account::id
account_video::video_id --> video::id

transcript::video_id --> video::id
summary::transcript_id --> transcript::id

transcript_chunk::transcript_id --> transcript::id
embedding::transcript_chunk_id --> transcript_chunk::id

conversation::account_id --> account::id
conversation::video_id --> video::id
message::conversation_id --> conversation::id

@enduml